--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,3 +3,7 @@
 export(DefineNetwork)
 export(MultipartiteBM)
 export(plot_GBM)
+import(gdata)
+import(igraph)
+import(parallel)
+useDynLib(GREMLIN)
