--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(DefineNetwork)
 export(MultipartiteBM)
 export(MultipartiteBMfixedmodel)
+export(comp_lik_ICL_export)
 export(plot_MBM)
 import(igraph)
 import(parallel)
