correction ordre des classifs et initialisation par notre algo

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(MultipartiteBM)
 export(MultipartiteBMfixedmodel)
 export(comp_lik_ICL_export)
 export(plot_MBM)
+import(blockmodels)
 import(igraph)
 import(parallel)
 importFrom(R6,R6Class)
