New function to extract clusters with the names of the nodes/entities/individuals

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(DefineNetwork)
 export(MultipartiteBM)
 export(MultipartiteBMfixedmodel)
 export(comp_lik_ICL_export)
+export(extract_clusters_MBM)
 export(plot_MBM)
 import(blockmodels)
 import(igraph)
