Wrote a function to simulate MBM with bernoulli or Poisson

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,9 +22,10 @@ Collate:
       'MultipartiteBM.R'
       'VEM_POO_version.R'
       'MultipartiteBMfixedmodel.R'
-      'initialize.R'
+      'initialize_VEM.R'
       'plot_MBM.R'
       'search_VK_POO_version.R'
       'utils.R'
       'comp_lik_ICL_export.R'
       'extract_clusters_MBM.R'
+      'rMBM.R'
