--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(MultipartiteBMfixedmodel)
 export(comp_lik_ICL_export)
 export(extract_clusters_MBM)
 export(plot_MBM)
+export(rMBM)
 import(blockmodels)
 import(igraph)
 import(parallel)
