Amélioration quand initialisation par SBM
On nettoie les classif init quand elles sont égales à d'autres classifs déja utilisées

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(extract_clusters_MBM)
 export(plot_MBM)
 export(rMBM)
 import(blockmodels)
+import(mclust)
 import(igraph)
 import(parallel)
 importFrom(R6,R6Class)
