--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,15 +6,17 @@ Author: P. Barbillon et S. Donnet
 Maintainer: The package maintainer <yourself@somewhere.net>
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
 Imports: 
-      R6, 
-      parallel,
-      igraph,
-      mclust
+    R6,
+    parallel,
+    igraph,
+    mclust,
+    stats,
+    blockmodels
 Collate: 
       'GREMLIN_package.R'
       'BMPOO.R'
