--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(multipartiteBM)
 export(multipartiteBMFixedModel)
 export(plotMBM)
 export(rMBM)
+import(aricode)
 import(blockmodels)
 import(igraph)
 import(parallel)
