--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ matrix:
       deploy:
         - provider: pages
           skip-cleanup: true
-          github-token: $GITHUB_PAT
+          github-token: $GITHUB_TOKEN
           keep-history: true
           local-dir: docs
           on:
