--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,12 @@ warnings_are_errors: false
 latex: false
 r_check_args: --as-cran
 
+before_cache: Rscript -e 'remotes::install_cran("pkgdown")'
+  deploy:
+    provider: script
+    script: Rscript -e 'pkgdown::deploy_site_github()'
+    skip_cleanup: true
+
 matrix:
   include:
     - os: linux
