--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,7 @@ Description: More about what it does (maybe more than one line)
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.0.0
+RoxygenNote: 7.0.2
 Imports: 
     R6,
     parallel,
@@ -17,7 +17,8 @@ Imports:
     mclust,
     stats,
     blockmodels,
-    aricode
+    aricode,
+    pbmcapply
 Collate: 
       'GREMLIN_package.R'
       'BMPOO.R'
