vignette and data

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -35,4 +35,7 @@ Collate:
       'rMBM.R'
       'comparClassif.R'
 Suggests: 
-    testthat (>= 2.1.0)
+    testthat (>= 2.1.0),
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
