--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -34,6 +34,7 @@ Collate:
       'extractClustersMBM.R'
       'rMBM.R'
       'comparClassif.R'
+      'MPEcoNetwork.R'
 Suggests: 
     testthat (>= 2.1.0),
     knitr,
