--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(extractClustersMBM)
 export(multipartiteBM)
 export(multipartiteBMFixedModel)
 export(plotMBM)
+export(predictMBM)
 export(rMBM)
 import(aricode)
 import(blockmodels)
