--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,5 +1,8 @@
-pandoc: 1.19.2.1
+pandoc: 2.7.3
 pkgdown: 1.3.0
 pkgdown_sha: ~
-articles: []
+articles:
+  EcologicalNetwork: EcologicalNetwork.html
+  Introduction: Introduction.html
+  SimulatedNetwork: SimulatedNetwork.html
 
