--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,8 +1,9 @@
 pandoc: 2.7.3
-pkgdown: 1.3.0
+pkgdown: 1.5.1
 pkgdown_sha: ~
 articles:
   EcologicalNetwork: EcologicalNetwork.html
   Introduction: Introduction.html
   SimulatedNetwork: SimulatedNetwork.html
+last_built: 2020-08-27T13:19Z
 
