--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,8 @@ Package: GREMLIN
 Type: Package
 Title: Inferring Multipartite Blockmodels
 Version: 0.1.1
-Author: P. Barbillon et S. Donnet
-Maintainer: P. Barbillon <pierre.barbillon@agroparistech.fr>
+Author: P. Barbillon and S. Donnet
+Maintainer: P. Barbillon and S. Donnet <pierre.barbillon@agroparistech.fr>
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
 License: GPL-3
