--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,13 +9,16 @@ Description: More about what it does (maybe more than one line)
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.1.0
+RoxygenNote: 7.1.1
 Imports: 
     R6,
     parallel,
+    grDevices,
+    graphics,
+    stats,
+    utils,
     igraph,
     mclust,
-    stats,
     blockmodels,
     aricode,
     pbmcapply
