prepare new update CRAN

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,19 +1,19 @@
 Package: GREMLINS
 Type: Package
 Title: Generalized Multipartite Networks
-Version: 0.2.0
+Version: 0.2.1
 Authors@R:  c(
           person(given = "Sophie", family = "Donnet", role = c("aut", "cre"), email = "sophie.donnet@inrae.fr", comment = c(ORCID = "0000-0003-4370-7316")),
           person(given = "Pierre", family = "Barbillon", role = c("aut"), email = "pierre.barbillon@agroparistech.fr",comment = c(ORCID = "0000-0002-7766-7693"))
           )
 Description: We define generalized multipartite networks  as the joint observation of several networks implying some common pre-specified groups of individuals. The aim is to fit an adapted version of  the popular stochastic block model to multipartite networks, as described in Bar-hen, Barbillon and Donnet (2020) <arXiv:1807.10138>.  
-URL: https://demiperimetre.github.io/GREMLINS/
-BugReports: https://github.com/demiperimetre/GREMLINS/issues
+URL: https://GrossSBM.github.io/GREMLINS/
+BugReports: https://github.com/GrossSBM/GREMLINS/issues
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.1
+RoxygenNote: 7.2.3
 Suggests: 
     testthat (>= 2.1.0),
     spelling,
@@ -23,12 +23,9 @@ Language: en-US
 Imports: 
     R6,
     parallel,
-    grDevices,
-    graphics,
     stats,
     utils,
     igraph,
-    mclust,
     blockmodels,
     aricode,
     pbmcapply
@@ -40,7 +37,6 @@ Collate:
       'VEMPOOVersion.R'
       'multipartiteBMFixedModel.R'
       'initializeVEM.R'
-      'plotMBM.R'
       'searchVKPOOVersion.R'
       'utils.R'
       'compLikICL.R'
